		2^16 seems to be enough even for long allele cases.
  - NEW: add -c option to simuCluster.py to allow it to se command instead
		of the default qaub
  - NEW: add reference count debugging in simulator.evolve (require
		specially built python.)
  - BUG: fix memory leaks in stator, util.cpp (pyExec) and simuPOP_common.i
  - NEW: add pyMating operator


version 0.7.1 - (Rev 378) - Aug 20, 2006
  - BUG: Fix a bug in backward trajectory simulation
  - CHG: change the release/snapsot generating process
  - NEW: add script/simuCluster.py which assists submission of jobs on cluster
		machines.
  - BUG: fix a random number generator bug on 64 bit machines.
  - NEW: random number seed is generated in a much better way, and is
		retrievable.
  - NEW: fix analComplexDisease.py which was not up to date with 
		simuComplexDisease.py

version 0.7.0 - (Release 0.6.15, July, 2006)
  - Check all scripts and test cases
  - Check document
  - release

version 0.6.14 - (Rev 341) - June 06, 2006
  - CHG: user's guide and reference manual revision
  - NEW: add a local scons build system for developers
  - BUG: fix the variable update bug.
  - BUG: fix setRNG(seed) bug.
  - CHG: rename setRNG() to SetRNG(), and listAllRNG() to ListAllRNG()

version 0.6.13 - (Rev 278) - Apr. 20, 2006
  - NEW: Add trajectory simulation functions follows those from selSim
         and geneArtisan.
  - NEW: Add controlledMating that accept an generation only if allele
         frequency at specified locus/loci fail in specified range.
  - NEW: add test case for controlledMating. (No doc is avaiable yet.)
  - NEW: implement trajectory simulation follows Slatkin 2001. This 
         works better than methods from both selSim and geneArtisan.
  - CHG: (internal change) abort the original template design. This 
         will make the source less flexible but can dramatically improve
         development time.
  - CHG: add separator to simuOpt's parameter specification.